--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <!-- HEADER-->
     <header>
-
+        <img src="/assets/iconos/logoheader.svg" alt="">
+        <div class="header--title-container">
+            <h1>La proxima revolución en el intercambio de criptomonedas</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="#plans" class="header--button">Conoce nuestros planes <span></span></a>
+        </div>
     </header>
 
     <!--MAIN-->
