--- a/index.html
+++ b/index.html
@@ -12,16 +12,86 @@
     <!-- HEADER-->
     <header>
         <img src="/assets/iconos/logoheader.svg" alt="">
+
         <div class="header--title-container">
             <h1>La proxima revolución en el intercambio de criptomonedas</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
             <a href="#plans" class="header--button">Conoce nuestros planes <span></span></a>
         </div>
+
     </header>
 
     <!--MAIN-->
     <main>
-        <section></section>
+
+        <!--EXCHANGE SECTION-->
+        <section class="main-exchange-container">
+
+            <div class="backgroundImg"></div>
+
+            <div class="main-exchange-container--title">
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+            </div>
+            
+            <section class="main-tables-container">
+                <div class="main-currency-table">
+                    <p class="currency-table-title">Monedas</p>
+                    <div class="currency-table-container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitcoin</td>
+                                <td class="table__top-right table__right">$1.96 <span class="donw"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ethereum</td>
+                                <td class="table__right">$0.07 <span class="up"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ripple</td>
+                                <td class="table__right">$2.17<span class="donw"></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__bottom-right table__right">$4.96<span class="donw"></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table--date">
+                        <P> <b>Actualizado:</b> 19 Julio 23:45</P>
+                    </div>
+                </div>
+
+                <div class="main-currency-table">
+                    <p class="currency-table-title2">Comisiones</p>
+                    <div class="currency-table-container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitrade</td>
+                                <td class="table__top-right table__right">$12.96</td>
+                            </tr>
+                            <tr>
+                                <td>Bitpreco</td>
+                                <td class="table__right">$13.07</td>
+                            </tr>
+                            <tr>
+                                <td>Novadax</td>
+                                <td class="table__right">$13.15</td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Coinext</td>
+                                <td class="table__bottom-right table__right">$14.96</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table--date2">
+                        <P> <b>Actualizado:</b> 19 Julio 23:45</P>
+                    </div>
+                </div>
+            </section>
+        </section>
+
+
         <section></section>
         <section></section>
         <section></section>
