--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batata Bit</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&family=Loved+by+the+King&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- HEADER-->
     <header>
-        <img src="/assets/iconos/logoheader.svg" alt="">
+        <img src="assets/iconos/logoheader.svg" alt="">
 
         <div class="header--title-container">
             <h1>La proxima revolución en el intercambio de criptomonedas</h1>
@@ -33,7 +33,7 @@
                 <h2>Visibilizamos todas las tasas de cambio.</h2>
                 <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
             </div>
-            
+
             <section class="main-tables-container">
                 <div class="main-currency-table">
                     <p class="currency-table-title">Monedas</p>
@@ -91,8 +91,41 @@
             </section>
         </section>
 
+        <!--BENEFICIOS-->
+        <section class="main-product-detail">
+            <span class="product-detail--batata-logo"></span>
+            <div class="product-detail--title">
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="clock"></span>
+                    <p class="product--card-tittle">Tiempo Real</p>
+                    <p class="product--card-body"> Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </article>
 
-        <section></section>
+                <article class="product-detail--card">
+                    <span class="eye"></span>
+                    <p class="product--card-tittle">No hay tasas escondidas</p>
+                    <p class="product--card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+
+                <article class="product-detail--card">
+                    <span class="dolar"></span>
+                    <p class="product--card-tittle">Compara monedas</p>
+                    <p class="product--card-body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+
+                <article class="product-detail--card">
+                    <span class="circle"></span>
+                    <p class="product--card-tittle">Información confiable</p>
+                    <p class="product--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
+        </section>
+
+
         <section></section>
         <section></section>
     </main>
