5. Section imagen, planes y tarjetas con diseño css

--- a/index.html
+++ b/index.html
@@ -125,9 +125,51 @@
                 </article>
         </section>
 
+        <!--BACKGROUND -->
+        <section class="bitcoin-img-container">
+            <h2>Conócelo hoy.</h2>
+        </section>
 
-        <section></section>
-        <section></section>
+        <!-- Secion 4 tarjetas  -->
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+
+            <section class="plans-container--slider">
+                <article class="plans-container--card">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span>99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoge este <span></span></button>
+                    </div>
+                </article>
+
+                <article class="plans-container--cardlimitado">
+                    <p class="limitado">Limitado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--titlelimitado">Un solo pago</h3>
+                        <p class="plan-card--pricelimitado"><span>$</span>199</p>
+                        <p class="plan-card--savinglimitado">*Exclusivo para los primeros 100 clientes a un precio especial.</p>
+                        <button class="plan-card--calimitado">Escoge este <span></span></button>
+                    </div>
+                </article>
+
+                <article class="plans-container--card">
+                    <p class="recommended">Basico</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Mensual</h3>
+                        <p class="plan-card--price"><span>$</span>15</p>
+                        <p class="plan-card--saving">*Pago por renovación mensual de servicios.</p>
+                        <button class="plan-card--ca">Escoge este <span></span></button>
+                    </div>
+                </article>
+            </section>
+
+        </section>
     </main>
 
     <!--FOOTER-->
