--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Batata Bit</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&family=Loved+by+the+King&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/tablet.css" media="(min-width: 930px)">
 </head>
 <body>
     <!-- HEADER-->
     <header>
-        <img src="assets/iconos/logoheader.svg" alt="">
+        <img src="assets/iconos/logoheader.svg"  alt="">
 
         <div class="header--title-container">
             <h1>La proxima revolución en el intercambio de criptomonedas</h1>
@@ -174,7 +175,16 @@
 
     <!--FOOTER-->
     <footer>
-
+        <section class="left">
+            <ul>
+                <li><a href="#"></a>Linkedin</li>
+                <li><a href="#"></a>Crunchbase</li>
+                <li><a href="#"></a>Hackernews</li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="assets/iconos/logo_footer.svg" alt="Logo de Batatabit 2020">
+        </section>
     </footer>
 </body>
 </html>
