--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Batata Bit</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&family=Loved+by+the+King&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/tablet.css" media="(min-width: 930px)">
+    <link rel="stylesheet" href="/css/tablet.css" media="(min-width: 930px)">
 </head>
 <body>
     <!-- HEADER-->
